--- a/list-prompt.cabal
+++ b/list-prompt.cabal
@@ -14,6 +14,10 @@ extra-source-files:  README.md, LICENSE
 cabal-version:       >=1.10
 tested-with: GHC >= 7.4 && <= 7.10
 
+source-repository head
+  type:     git
+  location: https://github.com/yamadapc/list-prompt
+
 library
   exposed-modules:     System.Console.ListPrompt
   build-depends:       ansi-terminal
