--- a/list-prompt.cabal
+++ b/list-prompt.cabal
@@ -14,6 +14,11 @@ extra-source-files:  README.md, LICENSE
 cabal-version:       >=1.10
 tested-with: GHC >= 7.4 && <= 7.10
 
+flag examples
+  description: Build the examples
+  manual: True
+  default: False
+
 source-repository head
   type:     git
   location: https://github.com/yamadapc/list-prompt
@@ -30,12 +35,19 @@ library
   default-language:    Haskell2010
 
 executable simple-demo
+  if flag(examples)
+    buildable: True
+  else
+    buildable: False
+  other-modules: System.Console.ListPrompt
+               , System.Console.ListPrompt.Internal
+               , System.Console.ListPrompt.Types
   build-depends:       ansi-terminal
                      , base >=4.5 && <5
                      , data-default
                      , terminal-size
+                     , list-prompt
   hs-source-dirs:      bin
-                     , lib
   main-is:             SimpleDemo.hs
   default-language:    Haskell2010
 
