--- a/list-prompt.cabal
+++ b/list-prompt.cabal
@@ -30,9 +30,12 @@ library
   build-depends:       ansi-terminal
                      , base >=4.5 && <5
                      , data-default
+                     , stm >= 2.4.4
                      , terminal-size
+                     , vty
   hs-source-dirs:      lib
   default-language:    Haskell2010
+  ghc-options:         -threaded -O2
 
 executable simple-demo
   if flag(examples)
@@ -45,22 +48,26 @@ executable simple-demo
   build-depends:       ansi-terminal
                      , base >=4.5 && <5
                      , data-default
+                     , list-prompt
+                     , stm >= 2.4.4
                      , terminal-size
+                     , vty
   hs-source-dirs:      bin
-                     , lib
   main-is:             SimpleDemo.hs
   default-language:    Haskell2010
+  ghc-options:         -threaded -O2
 
 test-suite hspec
   type:                exitcode-stdio-1.0
   build-depends:       ansi-terminal
                      , base >=4.5 && <5
                      , data-default
-                     , terminal-size
-
                      , hspec
+                     , list-prompt
+                     , stm >= 2.4.4
+                     , terminal-size
+                     , vty
   hs-source-dirs:      bin
-                     , lib
                      , test
   main-is:             Spec.hs
   default-language:    Haskell2010
