--- a/list-prompt.cabal
+++ b/list-prompt.cabal
@@ -53,6 +53,7 @@ executable simple-demo
                      , terminal-size
                      , vty
   hs-source-dirs:      bin
+                     , lib
   main-is:             SimpleDemo.hs
   default-language:    Haskell2010
   ghc-options:         -threaded -O2
@@ -68,6 +69,7 @@ test-suite hspec
                      , terminal-size
                      , vty
   hs-source-dirs:      bin
+                     , lib
                      , test
   main-is:             Spec.hs
   default-language:    Haskell2010
