--- a/list-prompt.cabal
+++ b/list-prompt.cabal
@@ -1,7 +1,7 @@
 name:                list-prompt
 version:             0.1.1.0
 synopsis:            A simple list prompt UI for the terminal.
-description:         See https://github.com/yamadapc/list-prompt
+description:         A simple list prompt UI for the terminal.
 homepage:            https://github.com/yamadapc/list-prompt.git
 license:             GPL-2
 license-file:        LICENSE
